# eyebot2

./: Cargo.toml
src/: auth.rs  comet.rs  main.rs  message.rs  twitch.rs
src/bot/: mod.rs
src/bot/command/: builtin.rs  mod.rs
src/bot/redeem/: builtin.rs  mod.rs
src/chat/: client.rs  mod.rs  tls.rs
src/client/: comet.rs  mod.rs
src/eventsub/: event.rs  mod.rs  payload.rs
tokens/: .gitignore
