[package]
name = "eyebot2"
version = "0.1.0"
edition = "2024"
authors = ['eyemotif']

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
rustls = "0.23.23"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1.3"
webpki-roots = "0.26.8"
